## leaderboard_panel.gd
## æ’è¡Œæ¦œé¢æ¿è„šæœ¬
extends Control

## æ’è¡Œæ¦œç±»å‹
enum LeaderboardType {
	LEVEL,      # ç­‰çº§æ’è¡Œ
	ENERGY,     # èƒ½é‡æ’è¡Œ
	GOLD,       # é‡‘å¸æ’è¡Œ
	ACHIEVEMENT,# æˆå°±æ’è¡Œ
	FARM        # å†œåœºæ’è¡Œ
}

## å½“å‰æ’è¡Œæ¦œç±»å‹
var current_type: LeaderboardType = LeaderboardType.LEVEL

## æ’è¡Œæ¦œç±»å‹é…ç½®
var type_config := {
	LeaderboardType.LEVEL: {"name": "ç­‰çº§æ’è¡Œ", "icon": "â­", "api_type": "level"},
	LeaderboardType.ENERGY: {"name": "èƒ½é‡æ’è¡Œ", "icon": "ğŸ’œ", "api_type": "energy"},
	LeaderboardType.GOLD: {"name": "è´¢å¯Œæ’è¡Œ", "icon": "ğŸª™", "api_type": "gold"},
	LeaderboardType.ACHIEVEMENT: {"name": "æˆå°±æ’è¡Œ", "icon": "ğŸ†", "api_type": "achievement"},
	LeaderboardType.FARM: {"name": "å†œåœºæ’è¡Œ", "icon": "ğŸŒ¾", "api_type": "farm"}
}

## æ’è¡Œæ¦œæ¡ç›®åœºæ™¯
var entry_item_scene: PackedScene = null

@onready var close_button: Button = $Header/CloseButton
@onready var title_label: Label = $Header/TitleLabel
@onready var my_rank_label: Label = $Header/MyRankLabel

## ç±»å‹åˆ‡æ¢æŒ‰é’®
@onready var level_button: Button = $Content/TypeButtons/LevelButton
@onready var energy_button: Button = $Content/TypeButtons/EnergyButton
@onready var gold_button: Button = $Content/TypeButtons/GoldButton
@onready var achievement_button: Button = $Content/TypeButtons/AchievementButton
@onready var farm_button: Button = $Content/TypeButtons/FarmButton

@onready var entry_list: VBoxContainer = $Content/ScrollContainer/EntryList

func _ready() -> void:
	_setup_buttons()
	_load_entry_item_scene()
	_switch_leaderboard(LeaderboardType.LEVEL)

	if DataManager:
		DataManager.leaderboard_updated.connect(_on_leaderboard_updated)


func _setup_buttons() -> void:
	"""è®¾ç½®æŒ‰é’®è¿æ¥"""
	if close_button:
		close_button.pressed.connect(_on_close_pressed)

	if level_button:
		level_button.pressed.connect(func(): _switch_leaderboard(LeaderboardType.LEVEL))
	if energy_button:
		energy_button.pressed.connect(func(): _switch_leaderboard(LeaderboardType.ENERGY))
	if gold_button:
		gold_button.pressed.connect(func(): _switch_leaderboard(LeaderboardType.GOLD))
	if achievement_button:
		achievement_button.pressed.connect(func(): _switch_leaderboard(LeaderboardType.ACHIEVEMENT))
	if farm_button:
		farm_button.pressed.connect(func(): _switch_leaderboard(LeaderboardType.FARM))


func _load_entry_item_scene() -> void:
	"""åŠ è½½æ’è¡Œæ¦œæ¡ç›®åœºæ™¯"""
	entry_item_scene = load("res://scenes/ui/leaderboard/leaderboard_entry.tscn")


## åˆ‡æ¢æ’è¡Œæ¦œ
func _switch_leaderboard(type: LeaderboardType) -> void:
	"""åˆ‡æ¢æ’è¡Œæ¦œç±»å‹"""
	current_type = type

	# æ›´æ–°æ ‡é¢˜
	if title_label and type_config.has(type):
		var config = type_config[type]
		title_label.text = "%s %s" % [config["icon"], config["name"]]

	# æ›´æ–°æŒ‰é’®çŠ¶æ€
	_update_button_states()

	# åŠ è½½æ•°æ®
	_load_leaderboard_data()


## æ›´æ–°æŒ‰é’®çŠ¶æ€
func _update_button_states() -> void:
	"""æ›´æ–°æŒ‰é’®é€‰ä¸­çŠ¶æ€"""
	if level_button:
		level_button.button_pressed = (current_type == LeaderboardType.LEVEL)
	if energy_button:
		energy_button.button_pressed = (current_type == LeaderboardType.ENERGY)
	if gold_button:
		gold_button.button_pressed = (current_type == LeaderboardType.GOLD)
	if achievement_button:
		achievement_button.button_pressed = (current_type == LeaderboardType.ACHIEVEMENT)
	if farm_button:
		farm_button.button_pressed = (current_type == LeaderboardType.FARM)


## åŠ è½½æ’è¡Œæ¦œæ•°æ®
func _load_leaderboard_data() -> void:
	"""ä» DataManager è·å–æ’è¡Œæ¦œæ•°æ®"""
	if not DataManager or not type_config.has(current_type):
		return

	var api_type = type_config[current_type]["api_type"]
	DataManager.sync_leaderboard(api_type, 1, func(success: bool, data: Dictionary):
		if success:
			_display_leaderboard()
	)


## æ˜¾ç¤ºæ’è¡Œæ¦œ
func _display_leaderboard() -> void:
	"""æ˜¾ç¤ºæ’è¡Œæ¦œæ•°æ®"""
	if not entry_list or not DataManager:
		return

	# æ¸…ç©ºç°æœ‰åˆ—è¡¨
	for child in entry_list.get_children():
		child.queue_free()

	var leaderboard = DataManager.get_leaderboard(type_config[current_type]["api_type"])
	if not leaderboard:
		return

	# æ·»åŠ æ¡ç›®
	for entry_dict in leaderboard.entries:
		if not entry_item_scene:
			break

		var item = entry_item_scene.instantiate()
		item.set_entry_data(entry_dict)
		entry_list.add_child(item)

	# æ›´æ–°æˆ‘çš„æ’å
	if my_rank_label:
		var my_rank = DataManager.get_my_rank(type_config[current_type]["api_type"])
		my_rank_label.text = "æˆ‘çš„æ’å: #%d" % my_rank if my_rank > 0 else "æˆ‘çš„æ’å: æœªä¸Šæ¦œ"


## æ’è¡Œæ¦œæ•°æ®æ›´æ–°å›è°ƒ
func _on_leaderboard_updated(lb_type: String) -> void:
	"""å½“æ’è¡Œæ¦œæ•°æ®æ›´æ–°æ—¶åˆ·æ–°"""
	var current_api_type = type_config[current_type]["api_type"]
	if lb_type == current_api_type:
		_display_leaderboard()


## å…³é—­æŒ‰é’®ç‚¹å‡»
func _on_close_pressed() -> void:
	"""å…³é—­é¢æ¿"""
	hide()


## æ‰“å¼€é¢æ¿
func open() -> void:
	"""æ‰“å¼€é¢æ¿å¹¶åˆ·æ–°æ•°æ®"""
	show()
	_load_leaderboard_data()
